// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search handles no search results 1`] = `
<div>
  <div
    class="relative flex lg:justify-center items-center flex-none h-16 md:h-20 md:border-b-2 rr-border w-full"
  >
    <form
      class="flex justify-between md:justify-between items-stretch h-10 w-full my-3"
      novalidate=""
    >
      <input
        class="mr-4 px-2 min-m-lg border-b-2 rr-border dark:bg-gh-darkly rr-text w-full"
        name="search"
        placeholder="Here goes the artist..."
        type="text"
        value="No match"
      />
      <button>
        <svg
          class="h-8 w-8 icon-colour"
          fill="none"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M18 6L6 18"
          />
          <path
            d="M6 6L18 18"
          />
        </svg>
      </button>
      <button
        class="btn flex btn-large md:ml-52"
        type="submit"
      >
        <svg
          class="h-8 w-8 icon-colour"
          fill="none"
          role="img"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
    </form>
    <div
      class="absolute px-3 bg-slate-100 dark:bg-gh-darkly border-2 rr-border top-14 md:top-16 w-full z-10"
    >
      <div
        class="overflow-auto w-full flex-auto h-64"
      >
        <p
          class="rr-text flex justify-center"
        >
          No artists found
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should handle the search action of the user 1`] = `
<div>
  <div
    class="relative flex lg:justify-center items-center flex-none h-16 md:h-20 md:border-b-2 rr-border w-full"
  >
    <form
      class="flex justify-between md:justify-between items-stretch h-10 w-full my-3"
      novalidate=""
    >
      <input
        class="mr-4 px-2 min-m-lg border-b-2 rr-border dark:bg-gh-darkly rr-text w-full"
        name="search"
        placeholder="Here goes the artist..."
        type="text"
        value="Sam Gendel"
      />
      <button
        class="btn flex btn-large md:ml-52"
        type="submit"
      >
        <svg
          class="h-8 w-8 icon-colour"
          fill="none"
          role="img"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
    </form>
  </div>
</div>
`;
